begin writing wrappings

--- a/Box2D/Box2D.csproj
+++ b/Box2D/Box2D.csproj
@@ -5,10 +5,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="libClangSharp.runtime.linux-x64" Version="18.1.3.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Box2D.Interop\Box2D.Interop.csproj" />
     </ItemGroup>
 
 </Project>
