--- a/Box2D.Interop.UnitTests/Box2D.Interop.UnitTests.csproj
+++ b/Box2D.Interop.UnitTests/Box2D.Interop.UnitTests.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Box2D.Interop.Tests</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="NUnit" Version="4.1.0" />
+    </ItemGroup>
 
 </Project>
