it should work but it does not. why????????????????????????????????????

--- a/Box2D/Box2D.csproj
+++ b/Box2D/Box2D.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <AssemblyName>Box2CSharp</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
