--- a/Box2D.Interop/Box2D.Interop.csproj
+++ b/Box2D.Interop/Box2D.Interop.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <AssemblyVersion>3.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
