--- a/Box2D/Box2D.csproj
+++ b/Box2D/Box2D.csproj
@@ -7,12 +7,9 @@
         <LangVersion>default</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <AssemblyName>Box2CSharp</AssemblyName>
+        <AssemblyVersion>1.0</AssemblyVersion>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="libClangSharp.runtime.linux-x64" Version="18.1.3.1" />
-    </ItemGroup>
-
+    
     <ItemGroup>
       <ProjectReference Include="..\Box2D.Interop\Box2D.Interop.csproj" />
     </ItemGroup>
