something about building library

--- a/Box2D/Box2D.csproj
+++ b/Box2D/Box2D.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+    <Import Project="../build.props" />
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -7,9 +8,9 @@
         <LangVersion>default</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <AssemblyName>Box2CSharp</AssemblyName>
-        <AssemblyVersion>1.0</AssemblyVersion>
+        <AssemblyVersion>$(WrapperVersion)</AssemblyVersion>
     </PropertyGroup>
-    
+
     <ItemGroup>
       <ProjectReference Include="..\Box2D.Interop\Box2D.Interop.csproj" />
     </ItemGroup>
