--- a/Box2D.Interop/Box2D.Interop.csproj
+++ b/Box2D.Interop/Box2D.Interop.csproj
@@ -1,16 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+    <Import Project="../build.props" />
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <AssemblyVersion>3.0</AssemblyVersion>
+        <AssemblyVersion>$(InteropVersion)</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
     </ItemGroup>
-
 </Project>
